day1review003
Python 3.9.4 (tags/v3.9.4:1f2e308, Apr  6 2021, 13:40:21) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license()" for more information.
>>> print("양주종코딩스쿨")
양주종코딩스쿨
>>> 
>>> print(" 코딩 파이썬 3일차 - 정수와 사칙 연산 ")
 코딩 파이썬 3일차 - 정수와 사칙 연산 
>>> 
>>> 20
20
>>> 50
50
>>> 20, 30, 50, 100
(20, 30, 50, 100)
>>> 
>>> 10 20 30
SyntaxError: invalid syntax
>>> 
>>> 
>>> 
>>> 20 + 30
50
>>> 
>>> 50 - 20
30
>>> 
>>> 3 * 5
15
>>> 
>>> 20 / 4
5.0
>>> 
>>> 20 // 4
5
>>> 
>>> 10 / 3
3.3333333333333335
>>> 
>>> 10 // 3
3
>>> 
>>> 10 % 3
1
>>> 10 % 2
0
>>> 20 % 3
2
>>> 
>>> 20 % 10
0
>>> 
>>> 
>>> 2 * 2
4
>>> 2 * 5
10
>>> 2 * 3
6
>>> 2 ** 3
8
>>> 2 ** 4
16
>>> 2** 8
256
>>> 2 * 8
16
>>> 2 * 10
20
>>> 2 ** 10
1024
>>> 
>>> 
>>> " 잘 보세요"
' 잘 보세요'
>>> 
>>> " 중요합니다 "
' 중요합니다 '
>>> 
>>> for i in range(0,11):
	print(2, "^", i, " =
	      
SyntaxError: EOL while scanning string literal
>>> for i in range(0,11):
	print(2, "^", i, " =
	      
SyntaxError: EOL while scanning string literal
>>> for i in range(0,11):
	print(2, "^", i, " = ", 2 ** i )

	
2 ^ 0  =  1
2 ^ 1  =  2
2 ^ 2  =  4
2 ^ 3  =  8
2 ^ 4  =  16
2 ^ 5  =  32
2 ^ 6  =  64
2 ^ 7  =  128
2 ^ 8  =  256
2 ^ 9  =  512
2 ^ 10  =  1024
>>> 
>>> 
>>> 2 ** 8
256
>>> 
>>> 2 ** 16
65536
>>> 
>>> 2 ** 24
16777216
>>> 
>>> 2 ** 32
4294967296
>>> 
>>> 
>>> 2 ** 10
1024
>>> 
>>> 2 ** 20
1048576
>>> 
>>> 2 ** 50
1125899906842624
>>> 
>>> 
>>> print(" 복습합니다. ")
 복습합니다. 
>>> 
>>> 2 * 3
6
>>> 
>>> 2 ** 3
8
>>> 2 ** 4
16
>>> 
>>> 100 / 34
2.9411764705882355
>>> 
>>> 100 / 3
33.333333333333336
>>> 
>>> 100 // 3
33
>>> 
>>> 10 % 3
1
>>> 
>>> 2 ** 8
256
>>> 
>>> 2 ** 10
1024
>>> 
